<resources>
    <string name="app_name">wetherForcastApp</string>
    <string name="fav">favorite</string>
    <string name="alarm">Alarm</string>
    <string name="text_name">Weather</string>
    <string name="weather_icon">moon</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="m_re_og_romsdal">Møre og Romsdal</string>
    <string name="sunday">Sunday</string>
    <string name="clear_sky">Clear sky</string>
    <string name="_22_12_c">22/12°C</string>
    <string name="Alarm">alarm</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="visibility">Visibility</string>
    <string name="cloud">Cloud</string>
    <string name="ultraviolet">Ultraviolet</string>
    <string name="Humidity">Humidity</string>
    <string name="Wind">Wind</string>
    <string name="Visibility">Visibility</string>
    <string name="Cloud">Cloud</string>
    <string name="Ultraviolet">Ultraviolet</string>
    <string name="save">SAVE</string>
    <string name="sitting">sitting</string>
    <string name="clear">Clear</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="map">Map</string>
    <string name="gps">GPS</string>
    <string name="location">Location</string>
    <string name="language">Language</string>
    <string name="Location">Location</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="temperature">Temperature</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="meter_sec">Meter / Sec</string>
    <string name="mile_hour">Mile / Hour</string>
    <string name="notifications">Notifications</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="time">time\n</string>
    <string name="notification">Notification</string>
</resources>