<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/home_24dp_5985e1_fill0_wght400_grad0_opsz24"
            android:title="@string/home" />
        <item
            android:id="@+id/favFragment"
            android:icon="@drawable/baseline_favorite_24"
            android:title="@string/fav" />
        <item
            android:id="@+id/alarmFragment"
            android:icon="@drawable/baseline_alarm_24"
            android:title="@string/alarm" />
        <item
            android:id="@+id/sittingFragment"
            android:icon="@drawable/settings_24dp_5985e1_fill0_wght400_grad0_opsz24"
            android:title="@string/settings" />
    </group>
</menu>